# zsper

./: .gitignore  README.md  install.sh  pyproject.toml  setup.sh
.codex/: config.toml
.codex/agents/: implementer.toml  reviewer.toml
apps/brain-web/: Dockerfile  next.config.mjs  package-lock.json  package.json  playwright.config.ts
apps/brain-web/app/: api-client.ts  globals.css  layout.tsx  page.tsx  workspace-shell.tsx
apps/brain-web/tests/: citations.spec.ts  workspace.spec.ts
compose/: brain.compose.yml.j2  brain.env.j2
docs/: zsper-local-ai-platform-ultimate-spec.md
docs/architecture/: platform-overview.md  profile-modes.md  repository-boundary.md
docs/runbooks/: air-offline.md  local-development.md  offline-state.md  testing.md
docs/superpowers/plans/: 2026-06-04-zsper-platform-implementation-dag.md  air-offline-out-of-order-progress.md  offline-state-out-of-order-progress.md  phase-1-progress.md  phase-2-progress.md  phase-3-progress.md  phase-4-progress.md
services/brain-api/: Dockerfile
services/brain-api/app/: deps.py  errors.py  main.py
src/zsper/: __init__.py  __main__.py  cli.py
tests/: conftest.py
tests/fixtures/: README.md
tests/integration/: test_profile_isolation_foundation.py
tests/security/: test_hosted_dependency_guard.py  test_llm_server_boundary.py  test_model_serving_boundary.py
tests/unit/: test_air_out_of_order_doc.py  test_cli_air_profile.py  test_cli_help.py  test_codex_agents.py  test_docs_boundary.py  test_docs_links.py  test_install_script.py  test_package.py  test_phase3_progress_doc.py  test_phase4_progress_doc.py  test_setup_air_script.py  test_test_harness.py
(+123 files in other folders)
